Stop breaking autocomplete when names are too long
Specifically, they wrap, causing them to take 2 lines of space

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -531,7 +531,7 @@ body #grid * {
     overflow-y: scroll;
     max-height: 90px;
     font-size: 85%;
-    width: 300px;
+    width: 350px;
 
     .autocomplete-item {
       background: @black2;
